Adjust polybar fonts.

--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -72,7 +72,7 @@ label-empty-padding = 1
 
 [bar/panel]
 width = 100%
-height = 24
+height = 20
 offset-x = 0
 offset-y = 0
 fixed-center = true
@@ -80,9 +80,9 @@ enable-ipc = true
 
 tray-position = right
 
-font-0 = "Terminus:style=Regular"
-font-1 = "FontAwesome:style=Regular"
-font-2 = "Symbola:style=Regular"
+font-0 = "Terminus-10"
+font-1 = "FontAwesome-10;1"
+font-2 = "Symbola-10"
 
 modules-left = ewmh
 modules-right = wireless-network battery datetime
