--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -18,7 +18,7 @@ label-padding = 1
 
 [module/wireless-network]
 type = internal/network
-interface = wlp3s0
+interface = wifi
 label-connected = 📶
 label-disconnected = ⊘
 label-connected-padding = 1
