Implement smart xkb layout switch in EXWM.

--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -16,6 +16,9 @@ label = "%date% - %time%"
 format-padding = 0
 label-padding = 1
 
+[module/xkeyboard]
+type = internal/xkeyboard
+
 [module/wireless-network]
 type = internal/network
 interface = wifi
@@ -85,4 +88,4 @@ font-1 = "FontAwesome-10;1"
 font-2 = "Symbola-10"
 
 modules-left = ewmh
-modules-right = wireless-network battery datetime
+modules-right = wireless-network xkeyboard battery datetime
