--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -10,9 +10,9 @@ underline-1 = #89AAEB
 [module/datetime]
 type = internal/date
 interval = 1.0
-date = "%Y-%m-%d%"
+date = "%a %d"
 time = "%H:%M"
-label = "%date% - %time%"
+label = "%date% %time%"
 format-padding = 0
 label-padding = 1
 
