--- a/email/.msmtprc
+++ b/email/.msmtprc
@@ -8,13 +8,13 @@ host smtp.gmail.com
 from sarg@sarg.org.ru
 auth on
 user sarg@sarg.org.ru
-passwordeval pass Email/sarg@sarg.org.ru | grep -Po '(?<=mbsync: ).+'
+passwordeval pass Email/sarg@sarg.org.ru | grep mbsync | cut -d' ' -f2
 
 account gmail-bender
 host smtp.gmail.com
 from bender@sarg.org.ru
 auth on
 user bender@sarg.org.ru
-passwordeval pass Email/bender@sarg.org.ru | grep -Po '(?<=mbsync: ).+'
+passwordeval pass Email/bender@sarg.org.ru | grep mbsync | cut -d' ' -f2
 
 account default : gmail
