--- a/system/etc/minidlna.conf
+++ b/system/etc/minidlna.conf
@@ -1,6 +1,4 @@
-media_dir=/var/lib/minidlna
-port=8200
-album_art_names=Cover.jpg/cover.jpg/AlbumArtSmall.jpg/albumartsmall.jpg
-album_art_names=AlbumArt.jpg/albumart.jpg/Album.jpg/album.jpg
-album_art_names=Folder.jpg/folder.jpg/Thumb.jpg/thumb.jpg
+media_dir=V,/home/sarg/Downloads/minidlna
+db_dir=/home/sarg/.cache/minidlna/
+log_dir=/home/sarg/.cache/minidlna/
 wide_links=yes
