Fix env for emacs shell commands

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -5,4 +5,4 @@ HashKnownHosts no
 
 Host sshelper
   Port 2222
-  ProxyCommand ~/.ssh/adb-channel tcp:%p org.galexander.sshd/.SimpleSSHD 1
+  ProxyCommand sh ~/.ssh/adb-channel tcp:%p org.galexander.sshd/.SimpleSSHD 1
