msmtp for de-gmail

--- a/email/.msmtprc
+++ b/email/.msmtprc
@@ -10,11 +10,11 @@ auth on
 user sarg@sarg.org.ru
 passwordeval pass Email/sarg@sarg.org.ru | grep mbsync | cut -d' ' -f2
 
-account gmail-bender
+account de-gmail
 host smtp.gmail.com
-from bender@sarg.org.ru
+from de.strofimov@gmail.com
 auth on
-user bender@sarg.org.ru
-passwordeval pass Email/bender@sarg.org.ru | grep mbsync | cut -d' ' -f2
+user de.strofimov@gmail.com
+passwordeval pass Email/de.strofimov@gmail.com | grep msmtp | cut -d' ' -f2
 
 account default : gmail
