--- a/desktop/.config/mpv/mpv.conf
+++ b/desktop/.config/mpv/mpv.conf
@@ -2,4 +2,4 @@ audio-display=no
 fs=yes
 sub-font-size=24
 x11-name=mpv
-ytdl-format=best[height<900]
+ytdl-format=bestvideo[height<=?900]+bestaudio
