Bibata cursor theme

--- a/xsession/.config/gtk-3.0/settings.ini
+++ b/xsession/.config/gtk-3.0/settings.ini
@@ -1,5 +1,4 @@
 [Settings]
-gtk-theme-name=Greybird
+gtk-theme-name="Greybird"
 gtk-icon-theme-name="Adwaita"
 gtk-font-name="Fira Code 12"
-gtk-cursor-theme-name="Adwaita"
