Use xoauth2 for gmail auth

--- a/email/.msmtprc
+++ b/email/.msmtprc
@@ -1,20 +1,18 @@
 defaults
+host smtp.gmail.com
+auth oauthbearer
 port 587
 tls on
 tls_trust_file /etc/ssl/certs/ca-certificates.crt
 
 account gmail
-host smtp.gmail.com
 from sarg@sarg.org.ru
-auth on
 user sarg@sarg.org.ru
-passwordeval pass Email/sarg@sarg.org.ru | grep mbsync | cut -d' ' -f2
+passwordeval oama access sarg@sarg.org.ru
 
 account de-gmail
-host smtp.gmail.com
 from de.strofimov@gmail.com
-auth on
 user de.strofimov@gmail.com
-passwordeval pass Email/de.strofimov@gmail.com | grep msmtp | cut -d' ' -f2
+passwordeval oama access de.strofimov@gmail.com
 
 account default : gmail
