--- a/email/.mbsyncrc
+++ b/email/.mbsyncrc
@@ -6,8 +6,9 @@ SyncState *
 IMAPStore gmail-remote
     Host imap.gmail.com
     User sarg@sarg.org.ru
-    PassCmd "pass show Email/smtp.gmail.com/sarg@sarg.org.ru"
-    SSLType IMAPS
+    PassCmd "oama access sarg@sarg.org.ru"
+    AuthMechs XOAUTH2
+    TLSType IMAPS
     TLSVersions +1.3
     CertificateFile /etc/ssl/certs/ca-certificates.crt
 
