--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,4 +10,13 @@
     default = simple
 
 [sendemail]
-    sendmailcmd = msmtp
+    smtpServer = /home/sarg/.guix-home/profile/bin/msmtp
+
+[url "git@github.com:"]
+  pushInsteadOf = "https://github.com/"
+
+[url "git@codeberg.org:"]
+  pushInsteadOf = "https://codeberg.org/"
+
+[url "git@gitlab.com:"]
+  pushInsteadOf = "https://gitlab.com/"
