--- a/pulumi/.envrc
+++ b/pulumi/.envrc
@@ -1,2 +1,2 @@
-use sops ../sops/.config/sops/main.yaml vpn selectel telegram pulumi
+use sops ../sops/.config/sops/main.yaml vpn selectel telegram pulumi hetzner
 use guix node pulumi
