Move sops secrets

--- a/pulumi/.envrc
+++ b/pulumi/.envrc
@@ -1,2 +1,4 @@
-use sops ../sops/.config/sops/main.yaml vpn selectel telegram pulumi hetzner
+use sops ../secrets.yaml vpn selectel telegram pulumi hetzner
 use guix node pulumi
+
+export OS_PASSWORD=$SELECTEL_PASS
