--- a/tgbot/.envrc
+++ b/tgbot/.envrc
@@ -1,3 +1,3 @@
-use sops ../sops/.config/sops/main.yaml vpn selectel telegram hetzner
+use sops ../secrets.yaml vpn selectel telegram hetzner
 use guix node
 layout node
