--- a/pulumi/.envrc
+++ b/pulumi/.envrc
@@ -1,4 +1,6 @@
 use sops ../secrets.yaml vpn selectel telegram pulumi hetzner
-use guix node pulumi
+use guix node pulumi google-cloud-sdk
 
+source .venv/bin/activate
 export OS_PASSWORD=$SELECTEL_PASS
+export OS_CLOUD=selectel
