--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -9,7 +9,7 @@
 		"@pulumi/hcloud": "1.23.0",
 		"@pulumi/openstack": "5.1.0",
 		"@pulumi/pulumi": "^3.0.0",
-		"@pulumi/random": "4.18.2",
+		"@pulumi/random": "^4.18.2",
 		"@pulumi/telegram": "file:sdks/telegram",
 		"prettier": "^3.5.3",
 		"typescript": "^4.0.0"
