dyndns: use http verbs

--- a/tgbot/src/hetzner.yaml
+++ b/tgbot/src/hetzner.yaml
@@ -29,7 +29,7 @@ wireguard:
 runcmd:
   - sysctl -p /etc/sysctl.d/nat.conf
   - systemd-run -u wg-watch -p "Wants=wg-quick@wg0.service" -p "After=wg-quick@wg0.service" watchdog.sh
-  - curl -s -4 http://dyndns.sarg.org.ru/set/[secret:DYNDNS_TOKEN] || true
+  - curl -s -4 http://dyndns.sarg.org.ru/[secret:DYNDNS_TOKEN] || true
 
 write_files:
   - content: |
