pulumi: remove worker custom domains

--- a/blog/wrangler.jsonc
+++ b/blog/wrangler.jsonc
@@ -5,5 +5,12 @@
     "directory": "./dist",
     "not_found_handling": "404-page",
     "html_handling": "auto-trailing-slash"
-  }
+  },
+  "workers_dev": false,
+  "routes": [
+    {
+      "pattern": "sarg.org.ru",
+      "custom_domain": true
+    }
+  ]
 }
