--- a/dyndns/wrangler.jsonc
+++ b/dyndns/wrangler.jsonc
@@ -7,6 +7,13 @@
 	"name": "dyndns",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-06-13",
+	"workers_dev": false,
 	"observability": { "enabled": true },
-	"vars": { "DOMAIN": "sarg.org.ru" }
+	"vars": { "DOMAIN": "sarg.org.ru" },
+	"routes": [
+		{
+			"pattern": "dyndns.sarg.org.ru",
+			"custom_domain": true
+		}
+	]
 }
