--- a/pulumi/.envrc
+++ b/pulumi/.envrc
@@ -1,6 +1,7 @@
-use sops ../secrets.yaml vpn selectel telegram pulumi hetzner
+use sops ../secrets.yaml pulumi selectel
 use guix node pulumi google-cloud-sdk
+layout node
 
 source .venv/bin/activate
-export OS_PASSWORD=$SELECTEL_PASS
+export OS_PASSWORD=$PASS
 export OS_CLOUD=selectel
