--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -1,17 +1,21 @@
 {
-	"name": "terraform",
-	"devDependencies": {
-		"@types/node": "^18"
-	},
-	"dependencies": {
-		"@pulumi/cloudflare": "6.2.1",
-		"@pulumi/gcp": "8.33.0",
-		"@pulumi/hcloud": "1.23.0",
-		"@pulumi/openstack": "5.1.0",
-		"@pulumi/pulumi": "^3.0.0",
-		"@pulumi/random": "^4.18.2",
-		"@pulumi/telegram": "file:sdks/telegram",
-		"prettier": "^3.5.3",
-		"typescript": "^4.0.0"
-	}
+  "name": "pulumi",
+  "devDependencies": {
+    "@types/node": "^18"
+  },
+  "scripts": {
+    "secrets": "sops -d --output-type json ../secrets.yaml | quicktype -t Secrets --lang ts > secrets.ts"
+  },
+  "dependencies": {
+    "@pulumi/cloudflare": "6.2.1",
+    "@pulumi/gcp": "8.33.0",
+    "@pulumi/hcloud": "1.23.0",
+    "@pulumi/openstack": "5.1.0",
+    "@pulumi/pulumi": "^3.0.0",
+    "@pulumi/random": "^4.18.2",
+    "@pulumi/telegram": "file:sdks/telegram",
+    "prettier": "^3.5.3",
+    "quicktype": "^23.2.6",
+    "typescript": "^4.0.0"
+  }
 }
