generate home.scm from config.org

--- a/email/.msmtprc
+++ b/email/.msmtprc
@@ -5,14 +5,12 @@ port 587
 tls on
 tls_trust_file /etc/ssl/certs/ca-certificates.crt
 
-account gmail
+account sarg@sarg.org.ru
 from sarg@sarg.org.ru
 user sarg@sarg.org.ru
 passwordeval oama access sarg@sarg.org.ru
 
-account de-gmail
+account de.strofimov@gmail.com
 from de.strofimov@gmail.com
 user de.strofimov@gmail.com
 passwordeval oama access de.strofimov@gmail.com
-
-account default : gmail
