--- a/guix/Justfile
+++ b/guix/Justfile
@@ -4,8 +4,14 @@ guix-lock := if lock != "0" { "guix time-machine -C channels.lock --" } else { "
 default:
     @just --list
 
-pbuild *args='':
-    guix build -L $PWD/personal {{args}}
+l *args:
+    @just -f {{source_file()}} {{args}} -L ~/devel/dotfiles/guix/personal
+
+refresh *args='':
+    guix refresh {{args}}
+
+build *args='':
+    guix build {{args}}
 
 pull *args='':
     guix pull {{args}}
